--- a/POSProject/Login.xaml
+++ b/POSProject/Login.xaml
@@ -49,6 +49,7 @@
                 Background="#FFF37E15"
                 FontWeight="Bold"
                 FontSize="20"
+                Click="Test"
                 >
             <Button.Template>
                 <ControlTemplate TargetType="Button">
