--- a/POSProject/App_Window.xaml
+++ b/POSProject/App_Window.xaml
@@ -8,7 +8,8 @@
         mc:Ignorable="d"
         WindowStyle="ToolWindow"
         ResizeMode="NoResize"              
-        Title="App_Window" Height="650" Width="1000">
+        Title="App_Window" Height="650" Width="1000"
+        >
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
@@ -25,13 +26,13 @@
                 </LinearGradientBrush>
             </ToolBarPanel.Background>
             <Grid Height="100" VerticalAlignment="Center">
-            <TextBlock Text="{Binding StringFormat=dd/MM/yyyy, Source={x:Static System:DateTime.Now}}"
+                <TextBlock Text="{Binding StringFormat=dd/MM/yyyy, Source={x:Static System:DateTime.Now}}"
                 Foreground="White"
                 FontWeight="Light" FontFamily="Rubik Light" FontSize="24" HorizontalAlignment="Center" Margin="0,2,0,0"
               />
-                <TextBlock x:Name="OrderTaker_Info" Text="Kasjer 333"  Background="Transparent" Foreground="Orange" FontSize="20" TextAlignment="Center" Margin="136,36,330,0"  />
-                <TextBlock x:Name="Name_Info" Text="Jakub Kołodziej"  Background="Transparent" Foreground="Orange" FontSize="20" TextAlignment="Center" Margin="299,36,134,0"  />
-                <TextBlock x:Name="Number_Info" Text="Kasa nr.4"  Background="Transparent" Foreground="Orange" FontSize="20" TextAlignment="Center" Margin="202,77,230,-42"  />
+                <TextBlock x:Name="OrderTaker_Info" Text="Kasjer 333" FontFamily="Fonts/#Rubik" VerticalAlignment="Top" Background="Transparent" Foreground="Orange" FontSize="20" TextAlignment="Center"  Height="29" Margin="202,41,377,0"  />
+                <TextBlock x:Name="Name_Info" Text="Jakub Kołodziej"  FontFamily="Fonts/#Rubik" VerticalAlignment="Bottom" Background="Transparent" Foreground="Orange" FontSize="20" TextAlignment="Center" Height="29" Margin="373,0,206,30"  />
+                <TextBlock x:Name="Number_Info" Text="Kasa nr.4"      FontFamily="Fonts/#Rubik" VerticalAlignment="Top" Background="Transparent" Foreground="Orange" FontSize="20" TextAlignment="Center" Height="40" Margin="205,77,209,0"  />
                 <Border BorderBrush="Orange" BorderThickness="3" Margin="202,0,206,-10"/>
                 <Border BorderBrush="Orange" BorderThickness="3" Margin="202,30,206,-10"/>
                 <Border BorderBrush="Orange" BorderThickness="3" Margin="202,70,206,-10"/>
@@ -46,7 +47,7 @@
                     <GradientStop Color="#FFFF6262" Offset="1"/>
                 </LinearGradientBrush>
             </StackPanel.Background>
-            <Button x:Name="Pizza_Button" Content="Pizza" Background="#FF888775" Foreground="White" FontFamily="Rubik Light" Width="220" Height="50" RenderTransformOrigin="0.5,0.5" ClickMode="Press" FontSize="20">
+            <Button x:Name="Pizza_Button" Click="Pizza_Button_Click" Content="Pizza" Background="#FF888775" Foreground="White" FontFamily="Rubik Light" Width="220" Height="50" RenderTransformOrigin="0.5,0.5" ClickMode="Press" FontSize="20">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -59,7 +60,7 @@
                     <Style/>
                 </Button.Style>
             </Button>
-            <Button x:Name="Trimmings_Button" Content="Dodatki" Background="#FF888775" Foreground="White" FontFamily="Rubik Light" Width="220" Height="50" RenderTransformOrigin="0.5,0.5" ClickMode="Press" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button x:Name="Trimmings_Button" Click="Trimmings_Button_Click" Content="Dodatki" Background="#FF888775" Foreground="White" FontFamily="Rubik Light" Width="220" Height="50" RenderTransformOrigin="0.5,0.5" ClickMode="Press" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -82,7 +83,7 @@
                     </TransformGroup>
                 </Button.RenderTransform>
             </Button>
-            <Button x:Name="Drinks_Button" Content="Napoje" Background="#FF888775" Foreground="White" FontFamily="Rubik Light" Width="220" Height="50" RenderTransformOrigin="0.5,0.5" ClickMode="Press" FontSize="20">
+            <Button x:Name="Drinks_Button" Click="Drinks_Button_Click" Content="Napoje" Background="#FF888775" Foreground="White" FontFamily="Rubik Light" Width="220" Height="50" RenderTransformOrigin="0.5,0.5" ClickMode="Press" FontSize="20">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -146,8 +147,15 @@
                 </Button.RenderTransform>
             </Button>
         </StackPanel>
-        <Label Content="Johnny Seafood" HorizontalAlignment="Left" Margin="0,31,0,0" VerticalAlignment="Top" Foreground="White" FontSize="30"/>
-        <StackPanel x:Name="Default_Screen" Grid.Column="1" Background="#FF1D83E2" Margin="0,290,0,0"/>
+        <Label Content="Johnny Seafood" FontFamily="Fonts/#Rubik" HorizontalAlignment="Center" Margin="0,31,0,0" VerticalAlignment="Top" Foreground="White" FontSize="30"/>
+
+        <Frame x:Name="Pages_Screen" Grid.Column="1" Margin="0,290,0,0" NavigationUIVisibility="Hidden" Background="#FFFFA262">
+            <!--TO DO
+            Fix the main default page-->
+        </Frame>
+
+
+
 
 
 
