--- a/POSProject/App_Window.xaml
+++ b/POSProject/App_Window.xaml
@@ -10,13 +10,13 @@
         ResizeMode="NoResize"              
         Title="App_Window" Height="650" Width="1000"
         >
-    <Grid>
+    <Grid Background="#FFFFA262">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <TextBlock Height="120" VerticalAlignment="Top" Foreground="White" Background="Orange"/>
-        <ListBox x:Name="lbRecipe" d:ItemsSource="{d:SampleData ItemCount=5}" Height="530" VerticalAlignment="Top" Background="#FF6D6D6D" Foreground="#FFFFEEEE" FontFamily="Rubik Light" FontSize="22" Margin="0,120,0,0"/>
+        <ListBox x:Name="lbBill" d:ItemsSource="{d:SampleData ItemCount=5}" Height="400" VerticalAlignment="Top" Background="#FF6D6D6D" Foreground="#FFFFEEEE" FontFamily="Rubik Light" FontSize="22" Margin="0,120,0,0"/>
         <ToolBarPanel Grid.Column="1" Height="120" VerticalAlignment="Top">
             <ToolBarPanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -150,9 +150,8 @@
         <Label Content="Johnny Seafood" FontFamily="Fonts/#Rubik" HorizontalAlignment="Center" Margin="0,31,0,0" VerticalAlignment="Top" Foreground="White" FontSize="30"/>
 
         <Frame x:Name="Pages_Screen" Grid.Column="1" Margin="0,290,0,0" NavigationUIVisibility="Hidden" Background="#FFFFA262" Source="/Pizza_Page.xaml">
-            <!--TO DO
-            Fix the main default page-->
         </Frame>
+        <Button x:Name="btNewOrder" Content="Nowe zamówienie" HorizontalAlignment="Center" Height="56" Margin="0,545,0,0" VerticalAlignment="Top" Width="230" Background="#FF888775" Foreground="White" FontFamily="Rubik Light" FontSize="20" Click="btNewOrder_Click"/>
 
 
 
